@@ -1,3 +1,7 @@
+Fri Jun 27 12:28:57 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/un.rb (mkmf): new command to create makefile.
+
 Fri Jun 27 11:06:05 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/un.rb (wait_writable): added help message.
